samples/_failures_safe/1761220092_d63694_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_664f0c45.c: In function ‘tokenize’:
./samples/SAFE/__tmp_664f0c45.c:146:9: error: expected expression at end of input
  146 |         if (
      |         ^~
./samples/SAFE/__tmp_664f0c45.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_664f0c45.c:146:9: error: expected declaration or statement at end of input
